--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
         <div class="row justify-content-center">
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 g-mb-30">
                 <article class="main-article">
-                    <img class="img-fluid w-100" src="assets/img/bg/abrindo-empresa.jpg" alt="Gravity">
+                    <img class="img-fluid w-100" src="assets/img/bg/abrindo-empresa.png" alt="Gravity">
                     <div class="g-width-80x g-bg-secondary g-pos-rel g-z-index-1 g-pa-30 g-mt-minus-50 mx-auto">
                         <!-- <span class="d-block g-color-gray-dark-v4 g-font-weight-600 g-font-size-12 text-uppercase mb-2">30 August 2020</span> -->
                         <h2 class="h5 g-color-black g-font-weight-600 mb-3">
-                            <a class="u-link-v5 g-color-black g-color-primary--hover g-cursor-pointer" href="#">Abertura de Empresa</a>
+                            <a class="u-link-v5 g-color-black g-color-primary--hover g-cursor-pointer" href="#abertura_empresa">Abertura de Empresa</a>
                         </h2>
                         <p class="g-color-gray-dark-v4 g-line-height-1_8">Abertura de empresa de forma rápida e segura, gratuitamente!</p>
                         <a class="g-font-size-13" href="#abertura_empresa">Saiba mais</a>
@@ -157,11 +157,11 @@
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 g-mb-30">
                 <article class="main-article">
-                    <img class="img-fluid w-100" src="assets/img/bg/migrando.jpg" alt="Gravity">
+                    <img class="img-fluid w-100" src="assets/img/bg/migrando.png" alt="Gravity">
                     <div class="g-width-80x g-bg-secondary g-pos-rel g-z-index-1 g-pa-30 g-mt-minus-50 mx-auto">
                         <!-- <span class="d-block g-color-gray-dark-v4 g-font-weight-600 g-font-size-12 text-uppercase mb-2">15 August 2020</span> -->
                         <h2 class="h5 g-color-black g-font-weight-600 mb-3">
-                            <a class="u-link-v5 g-color-black g-color-primary--hover g-cursor-pointer" href="#">Migrar de MEI para ME</a>
+                            <a class="u-link-v5 g-color-black g-color-primary--hover g-cursor-pointer" href="#migracao">Migrar de MEI para ME</a>
                         </h2>
                         <p class="g-color-gray-dark-v4 g-line-height-1_8">Realizamos a migração de MEI para ME com agilidade, segurança e sem complicações!</p>
                         <a class="g-font-size-13" href="#migracao">Saiba mais</a>
@@ -170,14 +170,14 @@
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 g-mb-30">
                 <article class="main-article">
-                    <img class="img-fluid w-100" src="assets/img/bg/impostorenda.jpg" alt="Gravity">
+                    <img class="img-fluid w-100" src="assets/img/bg/impostorenda.png" alt="Imposto de Renda">
                     <div class="g-width-80x g-bg-secondary g-pos-rel g-z-index-1 g-pa-30 g-mt-minus-50 mx-auto">
                         <!-- <span class="d-block g-color-gray-dark-v4 g-font-weight-600 g-font-size-12 text-uppercase mb-2">22 July 2020</span> -->
                         <h2 class="h5 g-color-black g-font-weight-600 mb-3">
-                            <a class="u-link-v5 g-color-black g-color-primary--hover g-cursor-pointer" href="#">Declaração de Imposto de Renda Pessoa Física</a>
+                            <a class="u-link-v5 g-color-black g-color-primary--hover g-cursor-pointer" href="#imposto_renda">Declaração de Imposto de Renda Pessoa Física</a>
                         </h2>
                         <p class="g-color-gray-dark-v4 g-line-height-1_8">Declaramos seu imposto de renda com agilidade e confiança</p>
-                        <a class="g-font-size-13" href="#">Saiba mais</a>
+                        <a class="g-font-size-13" href="#imposto_renda">Saiba mais</a>
                     </div>
                 </article>
             </div>
@@ -361,7 +361,7 @@
                 <div class="col-lg-3 g-mb-30">
                     <article class="u-shadow-v11 rounded g-pa-25" style="min-height: 245px;">
                         <h2 class="h4 g-mb-15">
-                            Análise da Contabilidade e OK
+                            Análise da BK Contabilidade
                         </h2>
                         
                         <p class="g-mb-15">Na abertura da empresa, analisamos seu modelo de negócio e sugerimos o melhor regime tributário.</p>
@@ -416,7 +416,7 @@
         </header>
         <div class="row">
             <div class="col-lg-6 align-self-center g-mb-30">
-                <img class="img-fluid" src="assets/img-temp/600x300/img1.jpg" alt="Gravity">
+                <img class="img-fluid" src="assets/img/bg/mei.png" alt="MEI">
             </div>
             <div class="col-lg-6 align-self-center g-pl-30--lg g-mb-20">
                 <p class="g-mb-10">Nossa equipe é expert em transformações de empresas MEI em ME, analisamos o perfil e todas as necessidades do empreendedor, para escolher o melhor regime tributário.</p>
@@ -456,7 +456,7 @@
                 <div class="col-lg-4 g-mb-30" style="padding-left: 5px; padding-right: 5px;">
                     <article class="u-shadow-v11 rounded g-pa-25" style="min-height: 303px;">
                         <h2 class="h4 g-mb-15">
-                            Análise da Contabilidade e OK
+                            Análise da BK Contabilidade
                         </h2>
                         
                         <p class="g-mb-15">Verificamos quais são suas necessidades e o perfil da sua empresa para identificar o regime tributário com a menor carga tributária.</p>
@@ -511,7 +511,59 @@
 </section>
 <!-- End About Us -->
 
-
+<!-- Start Services -->
+<section id="imposto_renda" class="g-pt-75 g-pb-45">
+    <div class="container">
+        <div class="row justify-content-center g-mb-20">
+            <div class="col-lg-7">
+                <div class="text-center">
+                    <h2 class="h3 g-color-black text-uppercase mb-2" style="font-weight: bold;">Declaração de imposto de renda pessoa física</h2>
+                    <h2 class="h3 g-color-black text-uppercase mb-2"></h2>
+                    <div class="d-inline-block g-width-35 g-height-2 g-bg-primary mb-2"></div>
+                    <p class="lead mb-0">Confira quem é obrigado a declarar o imposto de renda em 2024</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6 align-self-center g-mb-30">
+                <img class="img-fluid" src="assets/img/bg/impostorenda.jpg" alt="Imposto de Renda">
+            </div>
+            <div class="col-lg-6 align-self-center g-pl-30--lg g-mb-20">
+                <!-- <p class="g-mb-10">Nossa equipe é expert em transformações de empresas MEI em ME, analisamos o perfil e todas as necessidades do empreendedor, para escolher o melhor regime tributário.</p> -->
+                <div class="row">
+                    <div class="col-sm-12">
+                        <ul class="list-unstyled g-color-gray-dark-v4 g-mb-0">
+                            <li class="d-flex g-mb-10">
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Obteve rendimentos tributáveis acima de R$30.639,90;
+                            </li>
+                            <li class="d-flex g-mb-10">
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Recebeu em 2023 rendimentos isentos, não tributáveis ou tributados exclusivamente na fonte, cuja soma tenha sido superior a R$ 200 mil;
+                            </li>
+                            <li class="d-flex g-mb-10">
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Obteve, em qualquer mês de 2023, ganho de capital na alienação de bens ou direitos, sujeito à incidência do imposto, ou realizou operações em bolsas de valores, de mercadorias, de futuros e assemelhadas cuja soma foi superior a R$ 40 mil, ou com apuração de ganhos líquidos sujeitas à incidência do imposto;
+                            </li>     
+                            <li class="d-flex g-mb-10">
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Quem teve, em 2023, receita bruta em valor superior a R$ 153.199,50 referente a atividade rural;
+                            </li>     
+                            <li class="d-flex g-mb-10">
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Possui trust no exterior, ou deseja atualizar bens no exterior;
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div style="text-align: center;">
+        <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="https://wa.me/5545999513059?text=Imposto%20de%20renda" target="_blank">
+            Entre em contato via Whatsapp
+            <span class="align-middle u-icon-v3 g-width-16 g-height-16 g-color-black g-bg-white g-font-size-11 rounded-circle ml-3">
+                 <i class="fa fa-angle-right"></i>
+            </span>
+        </a>
+    </div>
+    </div>
+</section>
+<!-- End Icon Blocks -->
 
 
 <hr class="g-mx-0 g-my-0">
@@ -582,6 +634,12 @@
                                         <path d="M1671 566q0 40-28 68l-724 724-136 136q-28 28-68 28t-68-28l-136-136-362-362q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 295 656-657q28-28 68-28t68 28l136 136q28 28 28 68z" fill="#72c02c"></path>
                                     </svg>
                                     <span>Até <b>R$50.000,00</b> de Faturamento Mensal</span>
+                                </li>
+                                <li class="g-mb-20">
+                                    <svg width="13" height="13" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1671 566q0 40-28 68l-724 724-136 136q-28 28-68 28t-68-28l-136-136-362-362q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 295 656-657q28-28 68-28t68 28l136 136q28 28 28 68z" fill="#72c02c"></path>
+                                    </svg>
+                                    <span>50% de desconto da declaração de imposto de renda PF</span>
                                 </li>
                                 <li class="g-mb-20">
                                     <svg width="14" height="14" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
@@ -662,6 +720,12 @@
                                     <span>Até <b>R$210.000,00</b> de Faturamento Mensal</span>
                                 </li>
                                 <li class="g-mb-20">
+                                    <svg width="13" height="13" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1671 566q0 40-28 68l-724 724-136 136q-28 28-68 28t-68-28l-136-136-362-362q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 295 656-657q28-28 68-28t68 28l136 136q28 28 28 68z" fill="#72c02c"></path>
+                                    </svg>
+                                    <span>50% de desconto da declaração de imposto de renda PF</span>
+                                </li>
+                                <li class="g-mb-20">
                                     <svg width="14" height="14" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M4 8 L8 4 L16 12 L24 4 L28 8 L20 16 L28 24 L24 28 L16 20 L8 28 L4 24 L12 16 z" fill="#bbb"></path>
                                     </svg>
@@ -738,6 +802,12 @@
                                         <path d="M1671 566q0 40-28 68l-724 724-136 136q-28 28-68 28t-68-28l-136-136-362-362q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 295 656-657q28-28 68-28t68 28l136 136q28 28 28 68z" fill="#72c02c"></path>
                                     </svg>
                                     <span>Até <b>R$320.000,00</b> de Faturamento Mensal</span>
+                                </li>
+                                <li class="g-mb-20">
+                                    <svg width="13" height="13" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1671 566q0 40-28 68l-724 724-136 136q-28 28-68 28t-68-28l-136-136-362-362q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 295 656-657q28-28 68-28t68 28l136 136q28 28 28 68z" fill="#72c02c"></path>
+                                    </svg>
+                                    <span>50% de desconto da declaração de imposto de renda PF</span>
                                 </li>
                                 <li class="g-mb-20">
                                     <svg width="13" height="13" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
@@ -1003,7 +1073,7 @@
             <div class="container g-pt-0">
                 <div class="masonry-grid row g-mb-45">
                     <div class="masonry-grid-sizer col-sm-1"></div>
-                    <div class="masonry-grid-item col-lg-6 g-mb-30">
+                    <div class="masonry-grid-item col-lg-8 g-mb-30">
                         <div class="g-pr-40--lg">
                             <!-- Start Heading -->
                             <span class="d-block g-color-primary g-font-size-17 text-uppercase mb-2">Sobre nós</span>
@@ -1015,17 +1085,12 @@
                     </div>
                     <div class="masonry-grid-item col-sm-6 col-lg-3 g-mb-30">
                         <div data-parallaxanimation='[{property: "transform", value:" translate3d(0,px,0)", initial:"-25", mid:"0", final:"25"}]'>
-                            <img class="img-fluid w-100" src="assets/img-temp/350x230/img5.jpg" alt="Gravity">
-                        </div>
-                    </div>
-                    <div class="masonry-grid-item col-sm-6 col-lg-3 g-mb-30">
-                        <div data-parallaxanimation='[{property: "transform", value:" translate3d(0,px,0)", initial:"25", mid:"0", final:"-25"}]'>
-                            <img class="img-fluid w-100" src="assets/img-temp/400x574/img1.jpg" alt="Gravity">
+                            <img class="img-fluid w-100" src="assets/img/bg/negocios.jpeg" alt="Negócios">
                         </div>
                     </div>
                     <div class="masonry-grid-item col-sm-6 col-lg-3 g-mb-30">
                         <div data-parallaxanimation='[{property: "transform", value:" translate3d(0,px,0)", initial:"-45", mid:"0", final:"45"}]'>
-                            <img class="img-fluid w-100" src="assets/img-temp/350x230/img6.jpg" alt="Gravity">
+                            <img class="img-fluid w-100" src="assets/img/bg/negocios2.jpeg" alt="Negócios">
                         </div>
                     </div>
                 </div>
