--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <!-- End Responsive Toggle Button -->
                         <!-- Start Logo -->
                         <a href="index.html" class="navbar-brand">
-                            <img src="assets/img/logo/logo-2.png" alt="Gravity">
+                            <img src="assets/img/logo/bklogo.png"  alt="BK Contabilidade">
                         </a>
                         <!-- End Logo -->
                         <!-- Start Navigation -->
@@ -91,7 +91,7 @@
         </header>
         <!-- End Header -->
     <!-- Start Promo Block -->
-    <section id="home" class="g-bg-gray-light-v5">
+    <section id="home" class="g-bg-gray-light-v5" style="margin-top: 15px;">
         <div class="container">
             <div class="row justify-content-between g-pt-75">
                 <div class="col-lg-6 align-self-center g-mb-0">
