--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <!-- Title -->
-    <title>Home Creative | Gravity - Multi-Purpose HTML Template</title>
+    <title>BK | Contabilidade</title>
     <!-- Meta Tags -->
     <meta charset="utf-8">
-    <meta name="author" content="G-Projects">
-    <meta name="keywords" content="Gravity, home, creative, mega, template">
-    <meta name="description" content="Home Creative | Gravity - Multi-Purpose HTML Template">
+    <meta name="author" content="alisonluisk">
+    <meta name="keywords" content="BK, contabilidade, imposto, renda, mei, me, empresas, simples, nacional, contador, alteracao MEI, migrar MEI para ME, declaração MEI, deixar de ser MEI,
+    contabilidade para MEI, abrir empresa, ter CNPJ, abertura de empresa, abertura de microempresa, abertura de empresa gratis, declaração de imposto de renda pessoa física, 
+    declaração de imposto de renda, IRPF, DIRPF, declaração de imposto de renda">
+    <meta name="description" content="BK Contabilidade | Resolvemos para você">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!-- Favicon -->
@@ -200,7 +202,7 @@
                         <div class="media g-mb-15">
                             <div class="d-flex mr-4">
                                 <span class="g-color-gray-dark-v5 g-font-size-26">
-                                    <i class="icon-finance-090 u-line-icon-pro"></i>
+                                    <i class="icon-finance-086 u-line-icon-pro"></i>
                                 </span>
                             </div>
                             <div class="media-body">
@@ -236,7 +238,7 @@
                         <div class="media g-mb-15">
                             <div class="d-flex mr-4">
                                 <span class="g-color-gray-dark-v5 g-font-size-26">
-                                    <i class="icon-finance-088 u-line-icon-pro"></i>
+                                    <i class="icon-finance-084 u-line-icon-pro"></i>
                                 </span>
                             </div>
                             <div class="media-body">
@@ -252,7 +254,7 @@
                         <div class="media g-mb-15">
                             <div class="d-flex mr-4">
                                 <span class="g-color-gray-dark-v5 g-font-size-26">
-                                    <i class="icon-finance-086 u-line-icon-pro"></i>
+                                    <i class="icon-finance-090 u-line-icon-pro"></i>
                                 </span>
                             </div>
                             <div class="media-body">
@@ -270,7 +272,7 @@
                         <div class="media g-mb-15">
                             <div class="d-flex mr-4">
                                 <span class="g-color-gray-dark-v5 g-font-size-26">
-                                    <i class="icon-finance-084 u-line-icon-pro"></i>
+                                    <i class="icon-finance-032 u-line-icon-pro"></i>
                                 </span>
                             </div>
                             <div class="media-body">
@@ -286,7 +288,7 @@
                         <div class="media g-mb-15">
                             <div class="d-flex mr-4">
                                 <span class="g-color-gray-dark-v5 g-font-size-26">
-                                    <i class="icon-finance-032 u-line-icon-pro"></i>
+                                    <i class="icon-finance-088 u-line-icon-pro"></i>
                                 </span>
                             </div>
                             <div class="media-body">
@@ -520,7 +522,7 @@
                     <h2 class="h3 g-color-black text-uppercase mb-2" style="font-weight: bold;">Declaração de imposto de renda pessoa física</h2>
                     <h2 class="h3 g-color-black text-uppercase mb-2"></h2>
                     <div class="d-inline-block g-width-35 g-height-2 g-bg-primary mb-2"></div>
-                    <p class="lead mb-0">Confira quem é obrigado a declarar o imposto de renda em 2024</p>
+                    <p class="lead mb-0">Veja quem é <b>obrigado</b> a declarar o imposto de renda em 2024</p>
                 </div>
             </div>
         </div>
@@ -532,29 +534,33 @@
                 <!-- <p class="g-mb-10">Nossa equipe é expert em transformações de empresas MEI em ME, analisamos o perfil e todas as necessidades do empreendedor, para escolher o melhor regime tributário.</p> -->
                 <div class="row">
                     <div class="col-sm-12">
-                        <ul class="list-unstyled g-color-gray-dark-v4 g-mb-0">
+                        <ul class="list-unstyled g-color-gray-dark-v4 g-mb-0" style="text-align: justify;">
                             <li class="d-flex g-mb-10">
-                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Obteve rendimentos tributáveis acima de R$30.639,90;
+                                <b>Em resumo:</b>
                             </li>
-                            <li class="d-flex g-mb-10">
-                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Recebeu em 2023 rendimentos isentos, não tributáveis ou tributados exclusivamente na fonte, cuja soma tenha sido superior a R$ 200 mil;
+                            <li class="g-mb-10">
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Obteve rendimentos tributáveis acima de <b>R$30.639,90</b>;
                             </li>
-                            <li class="d-flex g-mb-10">
-                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Obteve, em qualquer mês de 2023, ganho de capital na alienação de bens ou direitos, sujeito à incidência do imposto, ou realizou operações em bolsas de valores, de mercadorias, de futuros e assemelhadas cuja soma foi superior a R$ 40 mil, ou com apuração de ganhos líquidos sujeitas à incidência do imposto;
+                            <li class="g-mb-10">
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Recebeu em 2023 rendimentos isentos, não tributáveis ou tributados exclusivamente na fonte, cuja soma tenha sido <b>superior a R$ 200 mil</b>;
+                            </li>
+                            <li class="g-mb-10">
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Obteve, em qualquer mês de 2023, <b>ganho de capital</b> na alienação de bens ou direitos, sujeito à incidência do imposto, ou realizou <b>operações em bolsas de valores</b>, de mercadorias, de futuros e assemelhadas cuja soma <b>foi superior a R$ 40 mil</b>, ou com apuração de ganhos líquidos sujeitas à incidência do imposto;
                             </li>     
-                            <li class="d-flex g-mb-10">
-                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Quem teve, em 2023, receita bruta em valor superior a R$ 153.199,50 referente a atividade rural;
-                            </li>     
-                            <li class="d-flex g-mb-10">
-                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Possui trust no exterior, ou deseja atualizar bens no exterior;
+                            <li class="g-mb-10">
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Teve a posse ou a propriedade, até 31 de dezembro de 2023, de bens ou direitos, inclusive terra nua, <b>acima de R$800 mil</b>;
                             </li>
+                            <li class="g-mb-10">
+                                <i class="icon-arrow-right-circle g-color-primary g-mt-5 g-mr-10"></i> Quem teve, em 2023, receita bruta em valor <b>superior a R$ 153.199,50</b> referente a <b>atividade rural</b>;
+                            </li>     
+
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
         <div style="text-align: center;">
-        <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="https://wa.me/5545999513059?text=Imposto%20de%20renda" target="_blank">
+        <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="https://wa.me/5545988059174?text=Imposto%20de%20renda" target="_blank">
             Entre em contato via Whatsapp
             <span class="align-middle u-icon-v3 g-width-16 g-height-16 g-color-black g-bg-white g-font-size-11 rounded-circle ml-3">
                  <i class="fa fa-angle-right"></i>
@@ -654,7 +660,7 @@
                                     <span>1 Reunião mensal com especialista por vídeo chamada</span>
                                 </li>
                             </ul>
-                            <!-- <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="#">Order Now</a> -->
+                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545988059174?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Smart%20para%20Empresa%20de%20Serviços!" target="_blank">Contratar</a>
                         </div>
                     </article>
                 </div>
@@ -738,7 +744,7 @@
                                     <span>1 Reunião mensal com especialista por vídeo chamada</span>
                                 </li>
                             </ul>
-                            <!-- <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="#">Order Now</a> -->
+                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545988059174?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Pró%20para%20Empresa%20de%20Serviços!" target="_blank">Contratar</a>
                         </div>
                     </article>
                 </div>
@@ -822,7 +828,7 @@
                                     <span>1 Reunião mensal com especialista por vídeo chamada</span>
                                 </li>
                             </ul>
-                            <!-- <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="#">Order Now</a> -->
+                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545988059174?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Master%20para%20Empresa%20de%20Serviços!" target="_blank">Contratar</a>
                         </div>
                     </article>
                 </div>
@@ -913,7 +919,7 @@
                                     <span>1 Reunião mensal com especialista por vídeo chamada</span>
                                 </li>
                             </ul>
-                            <!-- <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="#">Order Now</a> -->
+                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545988059174?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Smart%20para%20Comércio!" target="_blank">Contratar</a>
                         </div>
                     </article>
                 </div>
@@ -991,7 +997,7 @@
                                     <span>1 Reunião mensal com especialista por vídeo chamada</span>
                                 </li>
                             </ul>
-                            <!-- <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="#">Order Now</a> -->
+                            <a class="btn text-uppercase u-btn-primary g-rounded-50 g-font-size-12 g-font-weight-700 g-pa-15-30 g-mb-15" href="https://wa.me/5545988059174?text=Ola!%20Gostaria%20de%20saber%20mais%20sobre%20o%20plano%20Pró%20para%20Comércio!" target="_blank">Contratar</a>
                         </div>
                     </article>
                 </div>
@@ -1140,7 +1146,7 @@
     <!-- End Back to Top -->
 
     <!-- Whatsapp -->
-    <a href="https://wa.me/5545999513059?text=Ola" style="position:fixed;width:60px;height:60px;bottom:40px;left:40px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888;
+    <a href="https://wa.me/5545988059174?text=Ola" style="position:fixed;width:60px;height:60px;bottom:40px;left:40px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888;
         z-index:1000;" target="_blank">
         <i style="margin-top:16px" class="fa fa-whatsapp"></i>
     </a>
@@ -1157,7 +1163,17 @@
 <!-- Gravity Init JS -->
 <script src="assets/js/gs.init.js"></script>
 <!-- Google Maps -->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script>
+<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script> -->
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y47NHY5G03"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y47NHY5G03');
+</script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
 
