changing google tag

--- a/index.html
+++ b/index.html
@@ -1166,13 +1166,13 @@
 <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script> -->
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y47NHY5G03"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16477015832"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-Y47NHY5G03');
+  gtag('config', 'AW-16477015832');
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
