--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
                                 </span>
                             </div>
                             <div class="media-body">
-                                <h3 class="h5 g-color-black mb-20">Habilitação e autorização do Emissor de NF-e ou NFC-e junto a SEFAZ</h3>
+                                <h3 class="h5 g-color-black mb-20">BPO Financeiro</h3>
                                 <div class="g-width-30 g-brd-bottom g-brd-primary g-my-15"></div>
-                                <p class="g-color-gray-dark-v4 g-mb-0">Habilitamos e realizamos o pedido de autorização do seu sistema de emissão de NF-e e ou NFC-e, realizamos todo o suporte inicial, até deixar sua empresa apta a emitir nota fiscal.</p>
+                                <p class="g-color-gray-dark-v4 g-mb-0">Organização e estruturação do financeiro da empresa, contemplando, gestão financeira, otimização de processos e redução de custos, apresentando uma visão panorâmica do negócio, permitindo ao empresário tomar decisões mais assertivas.</p>
                             </div>
                         </div>
                     </div>
@@ -399,18 +399,12 @@
             <!-- </div> -->
         </div>
         <div style="text-align: center;">
-        <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="#plano_servicos">
-            Planos para Serviços
-            <!-- <span class="align-middle u-icon-v3 g-width-16 g-height-16 g-color-black g-bg-white g-font-size-11 rounded-circle ml-3">
-                <i class="fa fa-angle-right"></i>
-            </span> -->
-        </a>
-        <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="#plano_comercio">
-            Planos para Comércio
-            <!-- <span class="align-middle u-icon-v3 g-width-16 g-height-16 g-color-black g-bg-white g-font-size-11 rounded-circle ml-3">
-                 <i class="fa fa-angle-right"></i>
-            </span> -->
-        </a>
+            <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="https://wa.me/5545988059174?text=Ola" target="_blank">
+                Fale com um de nossos consultores
+                <span class="align-middle u-icon-v3 g-width-16 g-height-16 g-color-black g-bg-white g-font-size-11 rounded-circle ml-3">
+                     <i class="fa fa-angle-right"></i>
+                </span>
+            </a>
     </div>
     </div>
 </section>
@@ -501,17 +495,11 @@
             </div>
         </div>
         <div style="text-align: center;">
-            <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="#plano_servicos">
-                Planos para Serviços
-                <!-- <span class="align-middle u-icon-v3 g-width-16 g-height-16 g-color-black g-bg-white g-font-size-11 rounded-circle ml-3">
-                    <i class="fa fa-angle-right"></i>
-                </span> -->
-            </a>
-            <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="#plano_comercio">
-                Planos para Comércio
-                <!-- <span class="align-middle u-icon-v3 g-width-16 g-height-16 g-color-black g-bg-white g-font-size-11 rounded-circle ml-3">
+            <a class="btn u-btn-primary g-font-size-13 g-rounded-50 g-pl-20 g-pr-15 g-py-9" href="https://wa.me/5545988059174?text=Ola" target="_blank">
+                Fale com um de nossos consultores
+                <span class="align-middle u-icon-v3 g-width-16 g-height-16 g-color-black g-bg-white g-font-size-11 rounded-circle ml-3">
                      <i class="fa fa-angle-right"></i>
-                </span> -->
+                </span>
             </a>
         </div>
     </div>
@@ -578,7 +566,7 @@
 
 
 <hr class="g-mx-0 g-my-0">
-    <section id="plano_servicos" class="g-pt-75 g-pb-45">
+    <!-- <section id="plano_servicos" class="g-pt-75 g-pb-45">
         <div class="container">
             <header class="text-center g-width-60x--md mx-auto g-mb-20 g-mt-minus-10">
                 <h2 class="h2 g-color-gray-dark-v1 g-font-weight-300">Empresa de Serviços</h2>
@@ -839,9 +827,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <hr class="g-mx-0 g-my-0">
+    <!-- <hr class="g-mx-0 g-my-0">
     <section id="plano_comercio" class="g-bg-secondary g-pt-75 g-pb-45">
         <div class="container">
             <header class="text-center g-width-60x--md mx-auto g-mb-20 g-mt-minus-10">
@@ -1008,7 +996,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     
     
     <hr class="g-mx-0 g-my-0">
