removing a few words

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
     <head>
         <!-- Title -->
-        <title>BK Contabilidade Online | Abrir Empresa Grátis | Contador Online</title>
+        <title>BK Contabilidade Online | Abertura de Empresa | Contador Online</title>
         <!-- Meta Tags -->
         <meta charset="utf-8">
         <meta name="author" content="alisonluisk">
         <meta name="keywords" content="BK, contabilidade, imposto, renda, mei, me, empresas, simples, nacional, contador, alteracao MEI, migrar MEI para ME, declaração MEI, deixar de ser MEI,
-           contabilidade para MEI, abrir empresa, ter CNPJ, abertura de empresa, abertura de microempresa, abertura de empresa gratis, declaração de imposto de renda pessoa física, 
+           contabilidade para MEI, abrir empresa, ter CNPJ, abertura de empresa, abertura de microempresa, abertura de empresa, declaração de imposto de renda pessoa física, 
            declaração de imposto de renda, IRPF, DIRPF, declaração de imposto de renda, contabilidade online, contabilidade, online">
         <meta name="description" content="Contabilidade online: Transformando sua gestão de forma eficiente e simplificada!">
-        <meta name="og:title" content="BK Contabilidade Online | Abrir Empresa Grátis | Contador Online"/>
+        <meta name="og:title" content="BK Contabilidade Online | Abertura de Empresa | Contador Online"/>
         <meta name="og:url" content="https://bkcontabilidade.com"/>
         <meta name="og:image" content="https://bkcontabilidade.com/assets/img/logo/logo.png"/>
         <meta name="og:description" content="Contabilidade online: Transformando sua gestão de forma eficiente e simplificada!"/>
@@ -116,7 +116,7 @@
                             <i class="g-color-primary g-font-size-40 icon-finance-038"></i>
                         </div>
                         <div class="media-body">
-                            <p class="mb-0">Abra sua empresa <b>gratuitamente</b>, com <b>segurança</b> e <b>agilidade</b>!</p>
+                            <p class="mb-0">Abra sua empresa, com <b>segurança</b> e <b>agilidade</b>!</p>
                         </div>
                     </div>
                     <div class="media g-mb-20">
@@ -157,7 +157,7 @@
                         <h2 class="h5 g-color-black g-font-weight-600 mb-3">
                             <a class="u-link-v5 g-color-black g-color-primary--hover g-cursor-pointer" href="#abertura_empresa">Abertura de Empresa</a>
                         </h2>
-                        <p class="g-color-gray-dark-v4 g-line-height-1_8">Abertura de empresa de forma rápida e segura, gratuitamente!</p>
+                        <p class="g-color-gray-dark-v4 g-line-height-1_8">Abertura de empresa de forma rápida e segura!</p>
                         <a class="g-font-size-13" href="#abertura_empresa">Saiba mais</a>
                     </div>
                 </article>
@@ -416,7 +416,7 @@
         <div class="row justify-content-center g-mb-20">
             <div class="col-lg-7">
                 <div class="text-center">
-                    <h2 class="h3 g-color-black text-uppercase mb-2" style="font-weight: bold;">Abertura de empresa grátis e sem burocracia!</h2>
+                    <h2 class="h3 g-color-black text-uppercase mb-2" style="font-weight: bold;">Abertura de empresa sem burocracia!</h2>
                     <h2 class="h3 g-color-black text-uppercase mb-2">Contabilidade completa para sua empresa.</h2>
                     <div class="d-inline-block g-width-35 g-height-2 g-bg-primary mb-2"></div>
                     <!-- <p class="lead mb-0">I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend.</p> -->
@@ -427,10 +427,6 @@
             <div class="col-lg-3"></div>
                 <div class="col-lg-7 g-mb-30">
                     <ul class="list-unstyled g-mb-0" style="font-size: 18px;">
-                        <li class="d-flex align-items-center g-mb-8">
-                            <i class="icon-check d-block g-color-primary g-mr-8"></i>
-                            <span class="d-block">Abertura de forma Grátis;</span>
-                        </li>
                         <li class="d-flex align-items-center g-mb-8">
                             <i class="icon-check d-block g-color-primary g-mr-8"></i>
                             <span class="d-block">Contadores especialistas no assunto;</span>
